@@ -3,7 +3,7 @@ begin_comment
 comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 begin_package
-DECL|package|org.apache.lucene.xmlparser.webdemo
+DECL|package|org.apache.lucene.demo.xmlparser
 package|package
 name|org
 operator|.
@@ -11,9 +11,9 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|xmlparser
+name|demo
 operator|.
-name|webdemo
+name|xmlparser
 package|;
 end_package
 begin_import
